--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -2,4 +2,49 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+}
+
+header{
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    height: 70px;
+    display: flex;
+}
+
+#logo{
+    width: 280px;
+    margin-top: 7px;
+    margin-left: 8px;
+}
+#logo:hover{
+    cursor: pointer;
+}
+
+nav ul {
+    display: flex;
+    font-size: large;
+    margin-left: 1190px;
+    margin-top: 25px;
+    gap: 30px;
+    font-weight: 700;
+    
+}
+
+nav ul li a{
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+nav ul  :hover {
+    font-weight: 800;
+    margin-top: -3px;
+    
+}
+
+#imgBanner {
+    display: flex;
+    width: 100%;
+    height: auto;
 }
